[tool.poetry]
name = "HSMA Hospital"
version = "0.1.0"
description = "Barebones clone of Theme Hospital as practice of HSMA lessons"
authors = ["Nik <hi@nik.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
Sphinx = "^5.3.0"
black = "^22.10.0"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
